fix(ui): amélioration de l'affichage des spinners et loaders

--- a/results/index.html
+++ b/results/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <style>
+    /* Chargement immédiat des styles critiques */
+    .spinner-border {
+      display: inline-block;
+      width: 1rem;
+      height: 1rem;
+      vertical-align: text-bottom;
+      border: 0.15em solid currentColor;
+      border-right-color: transparent;
+      border-radius: 50%;
+      animation: spinner-border 0.75s linear infinite;
+    }
+    @keyframes spinner-border {
+      to { transform: rotate(360deg); }
+    }
+  </style>
   <meta charset="UTF-8">
   <title>Consultation des Notes - MESRS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
