--- a/results/notes.html
+++ b/results/notes.html
@@ -35,12 +35,18 @@
       <div class="row justify-content-center">
         <div class="col-12 col-xxl-10">
           <div class="card border-0 shadow-sm">
-            <div class="card-header bg-white py-3">
-              <h2 class="h4 fw-bold mb-0" style="color: #1a3a2c">
-                <i class="bi bi-building me-2"></i>
-                <span id="etablissement-nom">Établissement</span> - 
-                <span id="formation-nom">Formation</span>
-              </h2>
+            <div class="card-header bg-white py-3 d-flex justify-content-between align-items-center">
+              <div>
+                <h2 class="h4 fw-bold mb-0" style="color: #1a3a2c">
+                  <i class="bi bi-mortarboard me-2"></i>
+                  <span id="etablissement-nom">Établissement</span> - 
+                  <span id="formation-nom">Formation</span>
+                </h2>
+              </div>
+              <button id="back-button" class="btn btn-outline-secondary">
+                <i class="bi bi-house-door me-1"></i>
+                <span class="back-text">Retour</span>
+              </button>
             </div>
             <div class="card-body px-4 py-3">
               <div class="alert alert-info mb-4">
