--- a/results/notes.html
+++ b/results/notes.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <link href="./css/styles.css" rel="stylesheet">
   <link href="./css/notes.css" rel="stylesheet">
 </head>
@@ -54,12 +55,26 @@
                 <span id="dispute-notice-text"></span>
               </div>
               
+              <!-- Barre de recherche -->
+              <div class="mb-4">
+                <div class="input-group">
+                  <span class="input-group-text">
+                    <i class="bi bi-search"></i>
+                  </span>
+                  <input type="text" id="search-input" class="form-control" placeholder="Rechercher par nom ou matricule...">
+                  <button id="reset-search" class="btn btn-outline-secondary" type="button">
+                    <i class="bi bi-x-circle"></i>
+                  </button>
+                </div>
+              </div>
+              
               <div class="table-responsive-lg">
                 <table class="table table-hover align-middle">
                   <thead class="table-light">
                     <tr>
                       <th class="text-center" style="width: 10%"></th>
-                      <th style="width: 45%"></th>
+                      <th class="matricule-header" style="width: 20%"></th>
+                      <th style="width: 55%"></th>
                       <th class="text-end" style="width: 15%"></th>
                     </tr>
                   </thead>
